--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             <div class="reg_popup_inputs">
                 <input type="text" class="reg_name_input" placeholder="Ваше имя...">
                 <span class="error_name_text">Введите имя!</span>
-                <input type="text" class="reg_data_input" placeholder="DD/MM/YYYY" onfocus="(this.type='date')">
+                <input type="date" class="reg_data_input" placeholder="Дата рождения - DD/MM/YYYY">
                 <span class="error_data_text">Введите дату!</span>
                 <input type="email" class="reg_mail_input" placeholder="E-mail...">
                 <span class="error_mail_text">Введите почту!</span>
