--- a/pages/Contacts/index.html
+++ b/pages/Contacts/index.html
@@ -151,6 +151,7 @@
                                 </div>
                             </div>
                         </div></div>
+                    <a href="../Catalog/index.html" class="nav_routes catalog-link">Каталог</a>
                     <a href="#" class="nav_routes">Акции</a>
                     <a href="../AboutUs/index.html" class="nav_routes">О нас</a>
                     <a href="#" class="nav_routes">Контакты</a>
