--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                             </div>
                         </div>
                     </div></div>
+                <a href="./pages/Catalog/index.html" class="nav_routes catalog-link">Каталог</a>
                 <a href="#" class="nav_routes">Акции</a>
                 <a href="./pages/AboutUs/index.html" class="nav_routes">О нас</a>
                 <a href="./pages/Contacts/index.html" class="nav_routes">Контакты</a>
