--- a/pages/Catalog/index.html
+++ b/pages/Catalog/index.html
@@ -501,7 +501,7 @@
                                 <div class="products_filter_price">
                                     <button class="sort_button">Дешевле <i class="fa-solid fa-up-down"></i></button>
                                 </div>
-                                <button class="filter_popup_btn">Фильтр</button>
+                                <button class="filter_popup_btn">Фильтр <i class="fa-solid fa-filter"></i></button>
                             </div>
                             <div class="products_banner_box">
                                 <img src="./assets/banner/1.png" alt="banner" class="products_banner_img">
