--- a/pages/Catalog/index.html
+++ b/pages/Catalog/index.html
@@ -80,27 +80,27 @@
                                 <div class="popup_box_main-routes">
                                     <img src="./assets/image/13.png" alt="figure" class="popup_figure">
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Бытовая химия</button>
+                                        <a href="./index.html" class="main_route_link">Бытовая химия</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Профессиональный клининг</button>
+                                        <a href="./index.html" class="main_route_link">Профессиональный клининг</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Промышленная химия</button>
+                                        <a href="./index.html" class="main_route_link">Промышленная химия</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Автохимия</button>
+                                        <a href="./index.html" class="main_route_link">Автохимия</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Уход за собой</button>
+                                        <a href="./index.html" class="main_route_link">Уход за собой</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                     <div class="main-route_box">
-                                        <button class="main_route_link">Продукция для гостиниц</button>
+                                        <a href="./index.html" class="main_route_link">Продукция для гостиниц</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                 </div>
