--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -78,7 +78,7 @@
                         <div class="catalog_popup_box">
                             <div class="col-5 main-routes_col">
                                 <div class="popup_box_main-routes">
-                                    <img src="../../assets/image/13.png" alt="figure" class="popup_figure">
+                                    <img src="./assets/image/13.png" alt="figure" class="popup_figure">
                                     <div class="main-route_box">
                                         <a href="../Catalog/index.html" class="main_route_link">Бытовая химия</a>
                                         <i class="fa-solid fa-chevron-right"></i>
