--- a/pages/CardOfProduct/index.html
+++ b/pages/CardOfProduct/index.html
@@ -179,6 +179,13 @@
                             <div class="box-images_inner">
                                 <img src="./assets/ProductCards/2.jpg" alt="prod_img" class="product-inner-image">
                                 <img src="./assets/ProductCards/1.jpg" alt="prod_img" class="product-inner-image">
+                                <img src="./assets/ProductCards/3.jpg" alt="prod_img" class="product-inner-image Selected">
+                                <img src="./assets/ProductCards/2.jpg" alt="prod_img" class="product-inner-image">
+                                <img src="./assets/ProductCards/1.jpg" alt="prod_img" class="product-inner-image">
+                                <img src="./assets/ProductCards/3.jpg" alt="prod_img" class="product-inner-image Selected">
+                                <img src="./assets/ProductCards/2.jpg" alt="prod_img" class="product-inner-image">
+                                <img src="./assets/ProductCards/1.jpg" alt="prod_img" class="product-inner-image">
+                                <img src="./assets/ProductCards/3.jpg" alt="prod_img" class="product-inner-image Selected">
                             </div>
                             <div class="box-images_picture">
                                 <img src="./assets/ProductCards/3.jpg" alt="prod_main_img"
@@ -233,7 +240,7 @@
                         <span class="feature_bar"></span>
                     </div>
                 </div>
-                <div class="features_box">
+                <div class="features_box Active">
                     <div class="features_develops-ct">
                         <h3 class="brand-develop_title">Бренд и страна производителя:</h3>
                     </div>
@@ -272,6 +279,31 @@
                             <span class="object_attr">Обьект:</span>
                             <span class="object_name">Сантехника</span>
                         </div>
+                    </div>
+                </div>
+                <div class="description_box">
+                    <div class="description_inner">
+                        <h3 class="description_title">О продукте:</h3>
+                        <p class="description_content">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam aliquid
+                            aperiam asperiores ducimus, inventore libero maxime nisi odit quidem quis quisquam quo sed,
+                            suscipit voluptatibus. Ad adipisci aliquam architecto asperiores aspernatur assumenda at
+                            autem cumque delectus deserunt dolor dolorum eius esse fugiat illo impedit in inventore ipsa
+                            iste libero minus nobis obcaecati praesentium quibusdam quos repellendus rerum sit tenetur
+                            unde, vero voluptas voluptatem voluptates voluptatum. Ab aperiam architecto asperiores autem
+                            cum, cupiditate dolor ea eius eum exercitationem labore magnam mollitia nam odit officiis
+                            optio pariatur perspiciatis quasi quisquam quod quos reprehenderit, similique tempora vel
+                            vitae. Aliquid aut blanditiis consectetur debitis dolorem doloribus ducimus et excepturi
+                            fuga fugiat fugit iusto laborum libero magni nemo, neque nostrum numquam odit porro quia
+                            quod recusandae repudiandae saepe temporibus totam ullam velit voluptas? Amet cum
+                            cupiditate, est minus, odio odit officia qui quibusdam reiciendis repudiandae tempore,
+                            voluptatem voluptates. Deserunt esse perferendis tempora vel vero? Accusantium architecto,
+                            asperiores consequatur corporis debitis delectus deleniti ducimus fugit id in maiores maxime
+                            minima necessitatibus, odio officia pariatur placeat porro quam quia quo recusandae
+                            reiciendis similique vero. Accusamus aliquid assumenda autem, dolor dolores eos error
+                            impedit nemo nesciunt nostrum, numquam quam ut velit. Beatae incidunt quae rerum voluptas
+                            voluptatibus.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -427,6 +459,14 @@
         </div>
     </section>
 </footer>
+    <div class="image-zoom_wrapper">
+        <div class="image-zoom_box">
+            <button class="close-image-zoom_btn">
+                <i class="fa-solid fa-x"></i>
+            </button>
+            <img src="./assets/ProductCards/1.jpg" alt="selectedImageForZoom" class="selectedImageForZoom">
+        </div>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/script.js"></script>
